Changes in schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
     <h1 class="logo"><a href="index.html">Innova</a></h1>
     <nav class="navigation">
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="index.html">Home</a></li>
             <li><a href="staff.html">Staff</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -20,6 +20,20 @@
 </div>
 
 <body>
+<div class="schedule">
+  <div class="box box-1">
+    <h1>NOV &nbsp; OSLO</h1>
+    <p>Digital Introductionary Course</p>
+  </div>
+  <div class="box box-2">2</div>
+  <div class="box box-3">3</div>
+  <div class="box box-4">4</div>
+  <div class="box box-5">5</div>
+  <div class="box box-6">6</div>
+  <div class="box box-7">7</div>
+  <div class="box box-8">8</div>
+  <div class="box box-9">9</div>
+</div>
 
 </body>
 </html>
