--- a/schedule.html
+++ b/schedule.html
@@ -22,11 +22,17 @@
 <body>
 <div class="schedule">
   <div class="box box-1">
-    <h1>NOV &nbsp; OSLO</h1>
+    <h1>NOV 15th - OSLO</h1>
     <p>Digital Introductionary Course</p>
   </div>
-  <div class="box box-2">2</div>
-  <div class="box box-3">3</div>
+  <div class="box box-2">
+    <h1>NOV 17th - BERGEN
+      <p>Course in xxx</p>
+  </div>
+  <div class="box box-3">
+    <h1>Monday, November 9th - OSLO</h1>
+    <p>Course in xxx</p>
+      </div>
   <div class="box box-4">4</div>
   <div class="box box-5">5</div>
   <div class="box box-6">6</div>
