--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Innova</title>
+<title>Inova</title>
 </head>
 
 <div class="header">
-    <h1 class="logo"><a href="index.html">Innova</a></h1>
+    <h1 class="logo"><a href="index.html">Inova</a></h1>
     <nav class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li> 
