--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Innova</title>
+<title>Inova</title>
 </head>
 
 <div class="header">
-    <h1 class="logo"><a href="index.html">Innova</a></h1>
+    <h1 class="logo"><a href="index.html">Inova</a></h1>
     <nav class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,6 +18,18 @@
         </ul>
     </nav>
 </div>
+
+<div class="banner">
+    <img src="images/here.jpg" alt="Passion led us here">
+</div>
+    <div class="text-image">
+        <p>Inova is a newly formed company with an enthusiastic interest in 
+            fostering new ideas and talents. Do you want to be an entrepreneur?
+            Sign up to one our innovation camps and shape your ideas into 
+            solutions.</p>
+    </div>
+
+
 
 <body>
 
