--- a/staff.html
+++ b/staff.html
@@ -20,6 +20,31 @@
 </div>
 
 <body>
+    <section class="row">
+        <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember1-img">
+        <section class="column darkbrown">
+          <h1 class="staffnames">Kine Smedsrud</h1>
+          <p class="medium montserrat"><a href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Kine is the product designer and developer in Inova.</p>
+        </section>
+      </section>
+  
+      <section class="row">
+        <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember2-img">
+        <section class="column darkbrown">
+          <h1 class="staffnames">Maia Charlotte Bjønness</h1>
+          <p class="medium montserrat"><href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Maia is the marketing and webdesigner in Inova .</p>
+        </section>
+      </section>
+  
+      <section class="row">
+        <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember3-img">
+        <section class="column darkbrown">
+          <h1 class="staffnames">Nora Øien</h1>
+          <p class="medium montserrat"><href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Nora is the programmer and business resposible in Inova</p>
+        </section>
+      </section>
+  
+  
 
 </body>
 </html>
