Utkast kontakt-side

--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,23 @@
 
 <body>
 
+<div>
+    <h2 class="contact-headline">Contact information</h2>
+</div> 
+    
+<div class="contact-container">
+    <div class="contact-text">
+        <p>Address: Pilestredet 48, 0167 Oslo
+        <br>
+       Phone number: +4747474747
+        <br>
+        Email: contact@inova.com
+        </p>
+        </div>
+    <div class="map">
+    <img src="images/map.png" alt="Map of location">
+        </div>
+</div>
+
 </body>
 </html>
