--- a/schedule.html
+++ b/schedule.html
@@ -20,25 +20,76 @@
 </div>
 
 <body>
+<div class="heading">
+  <h1>Schedule for November 2020</h1>
+</div>
+
 <div class="schedule">
-  <div class="box box-1">
-    <h1>NOV 15th - OSLO</h1>
-    <p>Digital Introductionary Course</p>
-  </div>
+    <div class="box box-1">
+      <h1>NOV 11th - Online</h1>
+      <p><b>Digital Introductionary Course </b><br>
+        What are innovation camps? <br>
+        How do they work? <br>
+        Who can benefit from these camps?
+      </p>
+    </div>
+
   <div class="box box-2">
-    <h1>NOV 17th - BERGEN
-      <p>Course in xxx</p>
+    <h1>NOV 12th - Online</h1>
+    <p><b>Innovation Camp - Part One</b><br>
+      Presenation of case<br>
+      Working on the case
+      Guideance from a mentor
+    </p>
   </div>
+
   <div class="box box-3">
-    <h1>Monday, November 9th - OSLO</h1>
-    <p>Course in xxx</p>
-      </div>
-  <div class="box box-4">4</div>
-  <div class="box box-5">5</div>
-  <div class="box box-6">6</div>
-  <div class="box box-7">7</div>
-  <div class="box box-8">8</div>
-  <div class="box box-9">9</div>
+    <h1>NOV 13th - Online</h1>
+    <p><b>Innovation Camp - Part Two</b><br>
+      Develop a presentation
+      Present the idea for the jury
+    </p>
+  </div>
+
+  <div class="box box-4">
+    <h1>NOV 18th - Online</h1>
+    <p><b>Pitching Evening</b><br>
+      Learn how to become a great pitcher</p>
+  </div>
+
+  <div class="box box-5">
+    <h1>NOV 19th - Online </h1>
+    <p>Course</p>
+  </div>
+
+  <div class="box box-6">
+    <h1>NOV 20th - Online</h1>
+    <p>Course</p>
+  </div>
+
+  <div class="box box-7">
+    <h1>NOV 24th - Online </h1>
+    <p><b>Presentation Techniques</b><br>
+      Improve your presentation skills!
+    </p>
+  </div>
+
+  <div class="box box-8">
+    <h1>NOV 26th - Online</h1>
+    <p><b>Innovation Camp - Part One</b><br>
+      Presenation of case<br>
+      Working on the case
+      Guideance from a mentor
+    </p>
+  </div>
+
+  <div class="box box-9">
+    <h1>NOV 27th - Online</h1>
+    <p><b>Innovation Camp - Part Two</b><br>
+      Develop a presentation
+      Present the idea for the jury
+    </p>
+  </div>
 </div>
 
 </body>
