Home + contact + menu + schedule updated

--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inova</title>
 </head>
-
+<div class="container">
 <div class="header">
     <h1 class="logo"><a href="index.html">Inova</a></h1>
     <nav class="navigation">
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="index.html">Home</a></li>
             <li><a href="staff.html">Staff</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -22,9 +22,9 @@
 <body>
 
 <div>
-    <h2 class="contact-headline">Contact information</h2>
-</div> 
-    
+    <h2 class="contact-headline">Contact Information</h2>
+</div>
+
 <div class="contact-container">
     <div class="contact-text">
         <p>Address: Pilestredet 48, 0167 Oslo
@@ -38,6 +38,6 @@
     <img src="images/map.png" alt="Map of location">
         </div>
 </div>
-
+</div>
 </body>
 </html>
