--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+<div class="container">
 <div class="header">
     <h1 class="logo"><a href="index.html">Inova</a></h1>
     <nav class="navigation">
@@ -25,11 +25,11 @@
     <img src="images/here.jpg" alt="Passion led us here">
 </div>
     <div class="text-image">
-        <p>Inova is a newly formed company with an enthusiastic interest in 
+        <p>Inova is a newly formed company with an enthusiastic interest in
             fostering new ideas and talents. Do you want to be an entrepreneur?
-            Sign up to one our innovation camps and shape your ideas into 
+            Sign up to one our innovation camps and shape your ideas into
             solutions.</p>
     </div>
-
+</div>
 </body>
 </html>
