--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inova</title>
 </head>
+<body>
 
+<div class="container">
 <div class="header">
     <h1 class="logo"><a href="index.html">Inova</a></h1>
     <nav class="navigation">
@@ -19,7 +21,7 @@
     </nav>
 </div>
 
-<body>
+
 <div class="heading">
   <h1>Schedule for November 2020</h1>
 </div>
@@ -27,8 +29,8 @@
 <div class="schedule">
     <div class="box box-1">
       <h1>NOV 11th - Online</h1>
-      <p><b>Digital Introductionary Course </b><br>
-        What are innovation camps? <br>
+      <h2>Digital Introductionary Course </h2>
+      <p> What are innovation camps? <br>
         How do they work? <br>
         Who can benefit from these camps?
       </p>
@@ -36,7 +38,8 @@
 
   <div class="box box-2">
     <h1>NOV 12th - Online</h1>
-    <p><b>Innovation Camp - Part One</b><br>
+    <h2>Innovation Camp - Part One</h2>
+    <p>
       Presenation of case<br>
       Working on the case
       Guideance from a mentor
@@ -45,8 +48,8 @@
 
   <div class="box box-3">
     <h1>NOV 13th - Online</h1>
-    <p><b>Innovation Camp - Part Two</b><br>
-      Develop a presentation
+    <h2>Innovation Camp - Part Two</h2>
+    <p>Develop a presentation
       Present the idea for the jury
     </p>
 </div>
@@ -54,31 +57,38 @@
 
   <div class="box box-4">
     <h1>NOV 18th - Online</h1>
-    <p><b>Pitching Evening</b><br>
-      Learn how to become a great pitcher</p>
+    <h2>Pitching Evening</h2>
+    <p>Learn how to become a great pitcher</p>
   </div>
 
   <div class="box box-5">
     <h1>NOV 19th - Online </h1>
-    <p>Course</p>
+    <h2>Innovation Camp - Part One</h2>
+    <p>Presenation of case<br>
+      Working on the case
+      Guideance from a mentor
+    </p>
   </div>
 
   <div class="box box-6">
     <h1>NOV 20th - Online</h1>
-    <p>Course</p>
+    <h2>Innovation Camp - Part Two</h2>
+    <p>Develop a presentation
+      Present the idea for the jury
+    </p>
 </div>
 
   <div class="box box-7">
     <h1>NOV 24th - Online </h1>
-    <p><b>Presentation Techniques</b><br>
-      Improve your presentation skills!
+    <h2>Presentation Techniques</h2>
+    <p>Improve your presentation skills!
     </p>
   </div>
 
   <div class="box box-8">
     <h1>NOV 26th - Online</h1>
-    <p><b>Innovation Camp - Part One</b><br>
-      Presenation of case<br>
+    <h2>Innovation Camp - Part One</h2>
+    <p>Presenation of case<br>
       Working on the case
       Guideance from a mentor
     </p>
@@ -86,12 +96,12 @@
 
   <div class="box box-9">
     <h1>NOV 27th - Online</h1>
-    <p><b>Innovation Camp - Part Two</b><br>
-      Develop a presentation
+    <h2>Innovation Camp - Part Two</h2>
+    <p>Develop a presentation
       Present the idea for the jury
     </p>
   </div>
 </div>
-
+</div>
 </body>
 </html>
