--- a/staff.html
+++ b/staff.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inova</title>
 </head>
+<body>
 
+<div class="container">
 <div class="header">
     <h1 class="logo"><a href="index.html">Inova</a></h1>
     <nav class="navigation">
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="index.html">Home</a></li>
             <li><a href="staff.html">Staff</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -19,7 +21,7 @@
     </nav>
 </div>
 
-<body>
+
     <section class="row">
         <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember1-img">
         <section class="column darkbrown">
@@ -27,7 +29,7 @@
           <p class="medium montserrat"><a href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Kine is the product designer and developer in Inova.</p>
         </section>
       </section>
-  
+
       <section class="row">
         <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember2-img">
         <section class="column darkbrown">
@@ -35,7 +37,7 @@
           <p class="medium montserrat"><href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Maia is the marketing and webdesigner in Inova .</p>
         </section>
       </section>
-  
+
       <section class="row">
         <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember3-img">
         <section class="column darkbrown">
@@ -43,8 +45,8 @@
           <p class="medium montserrat"><href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Nora is the programmer and business resposible in Inova</p>
         </section>
       </section>
-  
-  
+</div>
+
 
 </body>
 </html>
