--- a/staff.html
+++ b/staff.html
@@ -6,46 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inova</title>
 </head>
-<body>
 
-<div class="container">
-<div class="header">
-    <h1 class="logo"><a href="index.html">Inova</a></h1>
-    <nav class="navigation">
+
+<body>
+  <div class="container">
+    <div class="header">
+      <h1 class="logo"><a href="index.html">Inova</a></h1>
+        <nav class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="staff.html">Staff</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>
-</div>
+        </nav>
+    </div>
 
 
-    <section class="row">
-        <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember1-img">
-        <section class="column darkbrown">
-          <h1 class="staffnames">Kine Smedsrud</h1>
-          <p class="medium montserrat"><a href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Kine is the product designer and developer in Inova.</p>
-        </section>
-      </section>
+    <div class="row">
+      <img class="column staff-pictures" src="images/staffmember1.jpg" width="300" height="50" alt="staffmember1-img">
+      <div class="column">
+        <h1 class="staffnames">Kine Smedsrud</h1>
+          <p>Kine is the product designer and developer in Inova.</p>
+      </div>
+    </div>
 
-      <section class="row">
-        <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember2-img">
-        <section class="column darkbrown">
-          <h1 class="staffnames">Maia Charlotte Bjønness</h1>
-          <p class="medium montserrat"><href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Maia is the marketing and webdesigner in Inova .</p>
-        </section>
-      </section>
+    <div class="row">
+      <img class="column staff-pictures" src="images/staffmember2.jpg" width="300" height="50" alt="staffmember2-img">
+      <div class="column">
+        <h1 class="staffnames">Maia Charlotte Bjønness</h1>
+          <p>Maia is the marketing and webdesigner in Inova .</p>
+      </div>
+    </div>
 
-      <section class="row">
-        <img class="column staff-pictures" src="images/staffmember.jpg" alt="staffmember3-img">
-        <section class="column darkbrown">
-          <h1 class="staffnames">Nora Øien</h1>
-          <p class="medium montserrat"><href="https://www.pexels.com/nb-no/bilde/sitte-innsjo-hatt-reise-4275889/">Nora is the programmer and business resposible in Inova</p>
-        </section>
-      </section>
-</div>
+    <div class="row">
+      <img class="column staff-pictures" src="images/staffmember3.jpg" width="300" height="50" alt="staffmember3-img">
+      <div class="column">
+        <h1 class="staffnames">Nora Øien</h1>
+          <p>Nora is the programmer and business resposible in Inova</p>
+      </div>
+    </div>
+  </div>
 
 
 </body>
